# rustFrida

agent/src/: lib.rs
agent/src/trace/: arm64_codegen.rs  mod.rs  transformer.rs
ios-rustfrida/: Cargo.toml
ios-rustfrida/agent/: Cargo.toml
ios-rustfrida/agent/src/: lib.rs
ios-rustfrida/common/: Cargo.toml
ios-rustfrida/common/src/: config.rs  lib.rs  protocol.rs
ios-rustfrida/controller/: Cargo.toml
ios-rustfrida/controller/src/: args.rs  injection.rs  launch.rs  main.rs
ios-rustfrida/native-api/: Cargo.toml
ios-rustfrida/native-api/src/: lib.rs
ios-rustfrida/objc-api/: Cargo.toml
ios-rustfrida/objc-api/src/: lib.rs
ios-rustfrida/quickjs-runtime/: Cargo.toml
ios-rustfrida/quickjs-runtime/src/: lib.rs  runtime.rs
quickjs-hook/src/: arm64_relocator.c  arm64_writer.c
quickjs-hook/src/jsapi/hook_api/: callback.rs  mod.rs
quickjs-hook/src/jsapi/java/: art_controller.rs  callback.rs  java_field_api.rs  java_hook_api.rs  java_method_list_api.rs  mod.rs  reflect.rs
quickjs-hook/src/jsapi/java/callback/: hook.rs  mod.rs  original_call.rs  registry.rs
quickjs-hook/src/jsapi/java/java_hook_api/: install.rs  install_support.rs  uninstall.rs
quickjs-hook/src/jsapi/module/: maps.rs
